--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Ouzayr",
-  "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "express": "^5.1.0"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server"
+    },
+    "author": "Ouzayr",
+    "license": "MIT",
+    "description": "",
+    "dependencies": {
+        "express": "^5.1.0",
+        "nodemon": "^3.1.10"
+    }
 }
